# ClarAVy

./: .gitattributes  MANIFEST.in  README.md  pyproject.toml  setup.cfg
claravy/: __init__.py  avalias.py  avparse.py  avstats.py  avtagger.py  taxonomy.py
claravy/data/: confidence_model.pkl  default_aliases.txt  default_avs.json  default_avs.txt  default_ignore.txt  default_substr.txt  default_taxonomy.txt
claravy/ibcc/: IBCC.py  annotator.py  labelmodel.py  utils.py
claravy/parsers/: parse_acronis.py  parse_adaware.py  parse_agnitum.py  parse_ahnlabv3.py  parse_alibaba.py  parse_alibabacloud.py  parse_alyac.py  parse_antivir.py  parse_antiyavl.py  parse_apex.py  parse_arcabit.py  parse_avast.py  parse_avastmobile.py  parse_avg.py  parse_avira.py  parse_avware.py  parse_babable.py  parse_baidu.py  parse_baiduinternational.py  parse_bitdefender.py  parse_bitdefenderfalx.py  parse_bitdefendertheta.py  parse_bkav.py  parse_bytehero.py  parse_catquickheal.py  parse_clamav.py  parse_cmc.py  parse_commtouch.py  parse_comodo.py  parse_crowdstrike.py  parse_cybereason.py  parse_cylance.py  parse_cynet.py  parse_cyren.py  parse_cyrencloud.py  parse_deepinstinct.py  parse_drweb.py  parse_egambit.py  parse_elastic.py  parse_emsisoft.py  (+63 more)
examples/: v2_scan.jsonl  v3_scan.jsonl
