[build-system]
requires = ["setuptools>=71.0.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name="claravy"
version="2.0.0"
authors=[{name = "RJ Joyce", email="joyce8@umbc.edu"}]
description="ClarAVy: Clarifying noise in antivirus scan data"
readme="README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
