[metadata]
name = claravy
version = 2.0.0

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    numpy>=1.26.0
    scipy==1.11.0
    ultradict
    pylcs
    editdistance
    atomics
    xgboost==2.1.1
    joblib
    numba>=0.61.0
    numba-scipy>=0.4.0
    scikit-learn==1.5.2
    orjson>=3.10.18

[options.entry_points]
console_scripts =
    claravy = claravy.avtagger:main_cli
